--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
-    "@babel/preset-stage-2": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "papaparse": "^4.6.2"
+  },
+  "devDependencies": {
   }
 }
