--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "node_hw1",
+  "name": "node_hw3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "babel-node": "@babel/node",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r @babel/register ./index.js"
+    "build": "babel src --out-dir dist --source-maps inline"
+  },
+  "bin": {
+    "file-util": "src/index.js"
   },
   "author": "Dzmitry Panamarenka",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/register": "^7.0.0",
+    "commander": "^2.19.0",
     "nodemon": "^1.18.7",
-    "papaparse": "^4.6.2"
+    "papaparse": "^4.6.2",
+    "through2": "^3.0.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
