--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "babel-node": "@babel/node",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir dist --source-maps inline"
+    "test": "jest",
+    "build": "babel src --out-dir dist --source-maps inline",
+    "watch": "babel src --watch --out-dir dist"
   },
   "bin": {
     "file-util": "src/index.js"
@@ -21,10 +22,9 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/register": "^7.0.0",
+    "axios": "^0.18.0",
     "commander": "^2.19.0",
-    "nodemon": "^1.18.7",
-    "papaparse": "^4.6.2",
-    "through2": "^3.0.0"
+    "jest": "^24.1.0"
   },
   "devDependencies": {}
 }
